<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60">

        <TextView
            android:id="@+id/all_investment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mo"
            android:textColor="#000000"
            android:layout_marginLeft="@dimen/dp_15"
            android:textSize="20dp"></TextView>

        <ImageView
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/right"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"></ImageView>

    </RelativeLayout>

    <View
        android:layout_width="@dimen/dp_380"
        android:background="#999999"
        android:layout_gravity="center"
        android:layout_height="1dp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="@dimen/dp_300"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e"></TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10"
                        android:textColor="@color/colorLight"
                        android:id="@+id/all_investment_money"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="@dimen/dp_1"
                        android:layout_height="@dimen/dp_10"
                        android:background="@color/colorGray"></View>

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:src="@drawable/zhu"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:id="@+id/all_investment_minTouMoney"></TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lv"></TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10"
                        android:textColor="#FB4257"
                        android:id="@+id/all_investment_yeatRate"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="@dimen/dp_1"
                        android:layout_height="@dimen/dp_10"
                        android:background="#999999"></View>

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:src="@drawable/manage_list_guarantee"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xi"
                        android:layout_marginLeft="@dimen/dp_5"></TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/dp_70"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shuo"></TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10"
                        android:textColor="#FB4257"
                        android:id="@+id/all_investment_suodingDays"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="@dimen/dp_1"
                        android:layout_height="@dimen/dp_10"
                        android:background="#999999"></View>

                    <ImageView
                        android:layout_width="@dimen/dp_20"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:src="@drawable/manage_list_member"></ImageView>

                    <TextView
                        android:id="@+id/all_investment_memberNum"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:text="100"></TextView>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent">

            <com.fiannce.bawei.framework.view.CustomView
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_70"
                android:id="@+id/custom"
                ></com.fiannce.bawei.framework.view.CustomView>

        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="#26B8EE"></TextView>
</LinearLayout>